# ebb

./: CMakeLists.txt  Cargo.toml  Makefile  README.md  TODO  lines.sh
data/: test_serialize.ebb
include/ebb/: basic.hpp  camera.hpp  component.hpp  error.hpp  math.hpp  mesh.hpp  node.hpp  object.hpp  renderer.hpp  serializable.hpp  shader.hpp  texture.hpp  time.hpp  transform.hpp  window.hpp
include/ebb/core/: window.hpp
include/ebb/data/: loader.hpp
include/ebb/internal/: classutil.hpp  cleanup.hpp  internals.hpp
include/ebb/mesh/: mesh.hpp  renderer.hpp
include/ebb/node/: node.hpp
include/ebb/render/: basic_vert.hpp  blinn_phong.hpp  camera.hpp  half_lambert.hpp  mesh_renderer.hpp  renderable.hpp  rendertex.hpp  shader.hpp
include/ebb/util/: class.hpp  file.hpp
macros/: Cargo.toml
macros/src/: lib.rs
src/: _dummy.cpp  camera.cpp  camera.rs  ecs.rs  engine.rs  error.cpp  file.cpp  init.rs  instance.rs  internal.cpp  lib.rs  mesh.cpp  mesh.rs  mesh_renderer.cpp  node.cpp  renderer.cpp  rendering.rs  rendering_context.rs  rendertex.cpp  shader.cpp  surface.rs  texture.cpp  texture.rs  transform.cpp  transform.rs  window.cpp  window.rs
src/rendering/: mod.rs  shader.rs
src/shaders/: camobj.vert
test/: test_camera.cpp  test_deserialize.cpp  test_mesh.cpp  test_node.cpp  test_serialize.cpp  test_window.cpp
tests/: node_test.ebb  renderer_test.cpp  test_camera.cpp  test_ecs_03.rs  test_instance_02.rs  test_instance_03.rs  test_mesh_load.cpp  test_mesh_renderer.cpp  test_node_load.cpp  test_node_save.cpp  test_nodetree_window.cpp  test_render_02.rs  test_shader_prep_04.rs  test_transform.cpp  test_window.cpp  test_window_01.rs  test_window_load.cpp  window.ebb
tests/assets/: test_04.wgsl
tests/portals/: portals.rs
tests/portals/assets/shaders/: test_model.wgsl  test_triangle.wgsl  test_triangle_nobuf.wgsl
