[package]
name = "ebb"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
env_logger = "0.10"
console_log = "1.0"
console_error_panic_hook = "0.1.6"
winit = { version = "0.29", features = ["rwh_05"] }
web-sys = "0"
wgpu = "22.0"

[dev-dependencies]
async-std = { version = "1.10", features = ["attributes"] }
wasm-bindgen = "0.2.93"
wasm-bindgen-futures = "0.4.43"

# this is neccesary to prevent tests being run in a seperate thread
[[test]]
name = "test_window_01"
path = "tests/test_window_01.rs"
harness = false

[[test]]
name = "test_render_02"
path = "tests/test_render_02.rs"
harness = false

[[test]]
name = "test_instance_03"
path = "tests/test_instance_03.rs"
harness = false