[package]
name = "ebb"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "macros"
]


[dependencies]
log = "0.4"
env_logger = "0.11.5"
console_log = "1.0"
console_error_panic_hook = "0.1.6"
winit = { version = "0.29", features = ["rwh_05"] }
web-sys = "0.3.72"
wgpu = "22.0"
futures = "0.3.31"
bytemuck = { version = "1.19.0", features = [ "derive" ] }
glam = "0.29.0"
ebb_macros = { path = "./macros" }

[dev-dependencies]
async-std = { version = "1.10", features = ["attributes"] }
wasm-bindgen = "0.2.93"
wasm-bindgen-futures = "0.4.43"

# this is neccesary to prevent tests being run in a seperate thread
[[test]]
name = "test_window_01"
path = "tests/test_window_01.rs"
harness = false

[[test]]
name = "test_instance_02"
path = "tests/test_instance_02.rs"
harness = false

[[test]]
name = "test_ecs_03"
path = "tests/test_ecs_03.rs"
harness = false

[[test]]
name = "portals"
path = "tests/portals/portals.rs"
harness = false