[package]
name = "ebb"
version = "0.1.2"
edition = "2021"
authors = ["Frederick Ziola <frederick.ziola@gmail.com>"]
description = "An ECS-based game engine built on WGPU and Winit"
license = "GPL-3.0"
repository = "https://github.com/FrederickAmpsUp/ebb"
homepage = "https://github.com/FrederickAmpsUp/ebb"
documentation = "https://docs.rs/ebb"


[dependencies]
log = "0.4"
env_logger = "0.11.5"
console_log = "1.0"
console_error_panic_hook = "0.1.6"
winit = { version = "0.29", features = ["rwh_05"] }
web-sys = "0.3.72"
wgpu = "22.0"
futures = "0.3.31"
bytemuck = { version = "1.19.0", features = [ "derive" ] }
glam = "0.29.0"

[dependencies.image]
version = "0.25.4"
default-features = false
features = ["png", "jpeg"]


[dev-dependencies]
async-std = { version = "1.10", features = ["attributes"] }
wasm-bindgen = "0.2.93"
wasm-bindgen-futures = "0.4.43"

# this is neccesary to prevent tests being run in a seperate thread
[[test]]
name = "test_window_01"
path = "tests/test_window_01.rs"
harness = false

[[test]]
name = "test_instance_02"
path = "tests/test_instance_02.rs"
harness = false

[[test]]
name = "test_ecs_03"
path = "tests/test_ecs_03.rs"
harness = false

[[test]]
name = "portals"
path = "tests/portals/portals.rs"
harness = false